<resources>
    <string name="app_name">PRM-Day1-01</string>
    <string name="app_textSize">24dp</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="android">Android</string>
    <string name="php">PHP</string>
    <string name="sql">SQL</string>
    <string name="python">Python</string>
    <string name="linear_layout_kpt">Linear Layout KPT</string>
    <string name="not_account_yet_create_one">Not account yet? Create one</string>
    <string name="or">---------Or---------</string>
    <string name="password">Password</string>
    <string name="demo_application">Demo Application</string>
    <string name="sign_in_form">Sign In Form</string>
    <string name="username">UserName</string>
    <string name="button">Button</string>
    <string name="sign_up_for_facebook">Sign Up For Facebook</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="english_change">English • Change</string>
    <string name="log_in_ins">Log In</string>
</resources>